--- a/FrontEndTech/Html_parts/domsession/dompartone.html
+++ b/FrontEndTech/Html_parts/domsession/dompartone.html
@@ -6,17 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>DocumentObjectModel</h1>
-    <h2>DocumentObjectAttributes</h2>
-
+    <h1 id="hone">DocumentObjectModel</h1>
+    <h1 class="cls"> DocumentObjectAttributes</h1>
     <ul>
         <li>document.URL</li>
         <li>document.head</li>
         <li>document.links</li>
     </ul>
-    <h2>dom methods</h2>
 
-<a href="#">One</a>
-<a href="#">Two</a>
+    <h1 class="cls">Dom Methods</h1>
+    <ul>
+        <li>document.getElementByTagName()</li>
+        <li>document.getElementById()</li>
+        <li>document.getElementByClassName()</li>
+    </ul>
+    <input type="text" name="" id="txt">
+
+    <a href="#">ONE</a>
+    <a href="#">TWO</a>
+    <script src="domfirst.js"></script>
 </body>
 </html>
+
